--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "preview": "vite  preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "antd": "^4.19.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "axios": "^0.26.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "scss": "^0.2.4"
   },
   "devDependencies": {
