--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "antd": "^4.19.5",
     "axios": "^0.26.1",
     "react": "^17.0.2",
@@ -24,6 +25,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "redux-devtools": "^3.7.0",
     "vite": "^2.9.5"
   }
 }
