--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@reduxjs/toolkit": "^1.8.1",
     "antd": "^4.19.5",
     "axios": "^0.26.1",
+    "md-editor-rt": "^1.6.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-quill": "^1.3.5",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.50.1",
     "scss": "^0.2.4"
   },
   "devDependencies": {
